# win-mic-muter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: developer.md
src/: main.rs
